include link to Stack overflow article regarding bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,6 +467,7 @@ button:focus {
     background: -o-radial-gradient(circle, rgba(237, 231, 227, 1) 0%, rgba(25, 153, 122, 1) 86%);
     background: radial-gradient(circle, rgba(237, 231, 227, 1) 0%, rgba(25, 153, 122, 1) 86%);
     color: #000;
+    font-size: 1rem;
 }
 
 .tooltip.show {
